# kash

./: '  .gitignore  .kash.c.swp  .parse.c.swp  .strtokex.c.swp  CMakeLists.txt  a.out  hi  hi.txt  hi.txt&  kash.c  parse.c  test.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
packer/packer/objects/pack/: pack-a49e8ce9af6bf0b9555f2f9140b2f8f4ffa3b6cf.idx  pack-a49e8ce9af6bf0b9555f2f9140b2f8f4ffa3b6cf.pack
practice/: .strtokOnlyOnce.c.swn  .strtokOnlyOnce.c.swo  .strtokOnlyOnce.c.swp  cout.txt  fileopen.c  forkprac.c  hi.c  itChar.c  notes.txt  redir.c  strprac.c  strtokOnlyOnce.c  substringfunc
